--- a/angiecrews_eda.ipynb
+++ b/angiecrews_eda.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a0f1f60",
+   "execution_count": 5,
+   "id": "cb744a59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 01 Imports\n",
+    "### 01 Imports\n",
     "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "98f25566",
    "metadata": {},
    "outputs": [
@@ -116,13 +116,13 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## 02 Load Data\n",
+    "### 02 Load Data\n",
     "\n",
     "# Load the Iris dataset into pandas DataFrame\n",
     "iris_df: pd.DataFrame = sns.load_dataset('iris')\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3617d3e5",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "ba7b48e7",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2925d293",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9a2e96f5",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "547196a0",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8acbb569",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "74c036b2",
    "metadata": {},
    "outputs": [
